Lesson#20 Implemented user registration via API
